# taggy-ecoscore

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
app/back/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/back/docs/: engine.md
app/back/migrations/: env.py
app/back/migrations/versions/: 202602091200_001_specs_fuel_schema.py  202602101200_002_drop_brake_columns.py  20260528_2253_ad59d083773c_create_weekly_goals_table.py  20260530_1929_bc4a842ee613_add_role_and_organization_id_to_users.py  20260531_0001_initial_schema.py  20260601_0002_vehicle_category_autonomy.py  20260601_0003_user_notification_prefs.py  20260601_0004_user_password_hash.py  20260603_0005_technical_specs_co2e_audit.py  20260603_0006_elapsed_time_estimates.py  20260604_0007_vehicle_fipe_fields.py  20260604_0008_taggy_places.py  20260606_0009_drop_removed_ludic_columns.py  20260606_0010_drop_maint_cost_columns.py  20260606_0011_accel_surge_source.py  20260608_0012_organization_razao_social.py
app/back/scripts/: seed.py  seed_technical_specs.py
app/back/src/: main.py  test_provider.py
app/back/src/constants/: __init__.py  ludic_metaphors.py  timezone.py  workbook_exports.py
app/back/src/database/: connection.py  url.py
app/back/src/dto/: __init__.py  fuel_price.py  goals.py  official_sources.py  routes.py  technical_specs.py  transactions.py  user.py  vehicle.py
app/back/tests/: test_export_builder.py  test_timezone.py  test_workbook_exports.py
docs/: README.md  (+2 more)
(+493 files in other folders)
